# FasterTransformer

./: .build.sh  .clangd  .gitignore  .gitmodules  CMakeCache.txt
.devcontainer/: devcontainer.json
examples/pytorch/whisper/: compare-hf.py  example-ft copy.py  example-ft-decoder.py  example-ft.py  example-large.py  example-medium.py  example-tiny.py  requirements.txt
examples/pytorch/whisper/utils/: __init__.py  ft-whisper.py  ft_whisper.py  huggingface_whisper_convert.py  tokenizer.py
src/: CMakeLists.txt
src/fastertransformer/layers/: DynamicDecodeLayer.cc  FfnLayer.cc
src/fastertransformer/layers/attention_layers/: UnfusedAttentionLayer.cc
src/fastertransformer/layers/beam_search_layers/: OnlineBeamSearchLayer.cu
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/whisper/: CMakeLists.txt  CachedSequenceAttention.cc  CachedSequenceAttention.h  Conv1dLayer.cc  Conv1dLayer.h  Conv1dTests.cc  WhisperConfig.h  WhisperContextDecoder.cc  WhisperContextDecoder.h  WhisperCrossContextAttention.cc  WhisperCudaContext.h  WhisperDecoder.cc  WhisperDecoder.h  WhisperDecoderLayerWeight.h  WhisperDecoderWeight.h  WhisperEncoder.cc  WhisperEncoder.h  WhisperEncoderLayer.cc  WhisperEncoderLayer.h  WhisperEncoderLayerWeight.h  WhisperEncoderWeight.h  WhisperKernels.cu  WhisperKernels.h  WhisperPromptDecoder.cc  WhisperPromptDecoder.h
src/fastertransformer/th_op/: CMakeLists.txt
src/fastertransformer/th_op/whisper/: CMakeLists.txt  FTConv1D.h  FTWhisperConfig.cc  FTWhisperConfig.h  FTWhisperDecoder.cc  FTWhisperDecoder.h  FTWhisperEncoder.cc  FTWhisperEncoder.h  GemmTests.cc  VectorReader.h
src/fastertransformer/utils/: conv1d.h
